# game-churn-prediction

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  WORKFLOW.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: config.py  main.py  requirements.txt
api/agents/: churn_analyst.py
api/registry/: game_registry.py  model_registry.py
api/routers/: chat.py  demo.py  players.py
api/services/: data_service.py  demo_service.py  model_service.py  shap_service.py
dashboard/: app.py
frontend/: .env.example  index.html  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: chat.js  client.js  demo.js  players.js
frontend/src/components/AnalyticsPanel/: AnalyticsPanel.css  AnalyticsPanel.jsx
frontend/src/components/ChatPanel/: ChatPanel.css  ChatPanel.jsx
frontend/src/components/DemoBanner/: DemoBanner.css  DemoBanner.jsx
frontend/src/components/PlayerSearch/: PlayerSearch.css  PlayerSearch.jsx
frontend/src/components/ShapChart/: ShapChart.css  ShapChart.jsx
frontend/src/hooks/: useChat.js  usePlayer.js
frontend/src/pages/: Home.css  Home.jsx
notebooks/: 01_review_text_analysis.ipynb
src/game_churn/: __init__.py
src/game_churn/collectors/: __init__.py  base.py  chess_com.py  opendota.py  rawg.py  riot.py  run_all.py  steam.py
src/game_churn/features/: build.py  engineer.py  schema.py  standardize.py
src/game_churn/models/: synthetic.py  train.py
src/game_churn/pipelines/: prefect_flow.py
src/game_churn/utils/: config.py
tests/: test_collectors.py  test_features.py  test_models.py  test_placeholder.py
